// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate_animated animate__fadeIn"
  >
     
    Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://www.google.es"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en GifGrid debe devolver el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate_animated animate__fadeIn"
  >
     
    Goku
     
  </h3>
  <p
    className="animate_animated animate__flash"
  >
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
